--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "emoji-picker-react": "^4.11.1",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
