--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18"
   },
   "devDependencies": {
